add service account

--- a/wildfly-sa-role.yaml
+++ b/wildfly-sa-role.yaml
@@ -1,3 +1,9 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: jgroups-kubeping-service-account
+  namespace: $TARGET_NAMESPACE
+---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
