--- a/wildfly-deploy.yaml
+++ b/wildfly-deploy.yaml
@@ -18,9 +18,9 @@ spec:
       serviceAccountName: jgroups-kubeping-service-account
       containers:
         - name: kube-ping
-          image: mmagnani/wildfly20-kubeping:latest
+          image: accordion/wildfly-kubeping:20
           command: ["/opt/jboss/wildfly/bin/standalone.sh"]
-          args: ["--server-config", "standalone-full-ha.xml", "-b", $(POD_IP), "-bmanagement", $(POD_IP) ,"-bprivate", $(POD_IP) ]
+          args: ["--server-config", "standalone-ha.xml", "-b", $(POD_IP), "-bmanagement", $(POD_IP) ,"-bprivate", $(POD_IP) ]
           resources:
             requests:
               memory: 256Mi
